fix(css): corrige o overflow da imagem no container

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -137,9 +137,13 @@ p {
   width: fit-content;
   height: fit-content;
 
+  max-width: 90vw;
+  max-height: 90vh;
+  
   img {
     max-width: 900px;
     height: auto;
+    max-height: 70vh;
   }
 
   #close {
